src/components/Sections/Hero/hero.module.css
.hero {
    /* padding-top: 120px; */
    height: 100vh;
}

.container {
    max-width: var(--container-width);
    height: 100%;
    margin-inline: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: start;
    align-items: start;
    padding-top: var(--header-height);
}

.headline {
    width: 50%;
}

.headline h1 {
    line-height: 1.5;
}

.headline :not(:first-child){
    margin-top: 40px;
}

.btn {
   font-size: 16px; 
   font-weight: 500;
}

.data_numbers_container {
    display: flex;
    align-items: start;
    gap: 30px;
}

.data_numbers_box {
    background-color: rgba(0, 0, 0, 50%);
    border-radius: 10px;
    padding: 20px 40px;
    margin-top: 80px;
    max-width: 580px;
}

.data_numbers {
    text-align: center;
}

.data_numbers_pipe {
    margin-top: 10px;
}


@media(min-width: 1025px){
    .hero {
        background-image: url("/images/astronaut1920_V2.jpg");
        background-size: cover;
        background-repeat: no-repeat;
        background-position: center top;
    }
}

@media(max-width: 1024px) {
    .hero {
        background: url("/images/astronaut1920_V2.jpg"),  rgba(0, 0, 0, 95%);
        background-blend-mode: overlay;
        background-position: center top;
        background-size: cover;
        min-width: 100%;
        max-width: 100%;
    }

    .container {
        padding-top: 60px;

    }
    
    .headline {
        width: 100%;
        text-align: center;
        max-width: 100%;

    }

    .headline h1 {
        font-size: 32px;
    }
    
    .headline h3 {
        font-size: 16px;
    }

    .headline span {
        display: none;
    }


    .data_numbers_container {
        display: flex;
        align-items: start;
        justify-content: center;
        text-align: center;
        gap: 20px;
    }
    
    .data_numbers_box {
        background-color: transparent;
        border-radius: 10px;
        width: 100%;
        padding: 0;
        align-self: flex-end;
    }
    
    .data_numbers_description {
        font-size: 14px;
    }

    
}

